fix: crash on older java